<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/waterGunWeight"
    android:layout_width="300dp"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/waterGun_view"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/waterGunConnect"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/connection_status_notconnected"
            android:textColor="@color/white" />

        <Switch
            android:id="@+id/safetySwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/safety_switch"
            android:textColor="@color/white"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="visible">

            <Button
                android:id="@+id/operateBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/play_btn"
                android:text="@string/pulse_on"
                android:textColor="@color/white"
                android:enabled="false"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginStart="10dp"
                android:text="@string/state"
                android:textColor="@color/white" />
            <TextView
                android:id="@+id/state"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_weight="1"
                android:text="@string/preparing"
                android:textColor="@color/red" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="visible">

            <Button
                android:id="@+id/switchBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/play_btn"
                android:text="@string/switch_targets"
                android:textColor="@color/white"
                android:enabled="false"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginStart="10dp"
                android:text="@string/nozzle"
                android:textColor="@color/white" />
            <TextView
                android:id="@+id/switch_state"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_weight="1"
                android:text="@string/clear_water"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="visible">
            <Button
                android:id="@+id/toLeftBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/play_btn"
                android:text="@string/to_left"
                android:textColor="@color/white"
                android:enabled="false"/>
            <Button
                android:id="@+id/toRightBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="@drawable/play_btn"
                android:text="@string/to_right"
                android:textColor="@color/white"
                android:enabled="false"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/prompt_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="gone">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:text="@string/nozzleSwitchPrompt"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:visibility="visible">
            <Button
                android:id="@+id/okBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/play_btn"
                android:text="@string/ok"
                android:textColor="@color/white"/>
            <Button
                android:id="@+id/cancelBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="@drawable/cancel_btn"
                android:text="@string/cancel"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>