<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/found_new_version"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/version_number"
        android:layout_marginBottom="5dp" />

    <TextView
        android:id="@+id/tvReleaseDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/release_date"
        android:layout_marginBottom="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_content"
        android:textStyle="bold"
        android:layout_marginBottom="5dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginBottom="15dp">

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:lineSpacingExtra="4dp" />

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <android.widget.Button
            android:id="@+id/btnCancel"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:text="@string/cancel"
            android:layout_marginEnd="10dp"
            android:background="@drawable/btn_cancel_bg" />

        <android.widget.Button
            android:id="@+id/btnUpdate"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:text="@string/update_now"
            android:textColor="@color/white"
            android:background="@drawable/btn_update_bg" />

    </LinearLayout>

</LinearLayout>