<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TtsShoutWeight">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible">
        <TextView
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/temperature"
            android:textColor="@color/white" />
        <TextView
            android:id="@+id/status"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/normal_temperature"
            android:textColor="@color/white" />
    </LinearLayout>

    <EditText
        android:id="@+id/tts_text"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:autofillHints="speak_text"
        android:background="@drawable/edittext_border"
        android:gravity="top"
        android:hint="@string/place_input_text"
        android:inputType="text"
        android:minLines="4"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:theme="@style/My_CheckBox">
        <RadioButton
            android:id="@+id/btn_man_voice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/male_voice"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/btn_woman_voice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/female_voice"/>
    </RadioGroup>
    <CheckBox
        android:id="@+id/tts_loop_playback_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/loop_playback"
        android:textColor="@color/white"
        android:textSize="14dp"
        android:theme="@style/My_CheckBox">

    </CheckBox>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/adjust_volume"
        android:textColor="@color/white" />

    <SeekBar
        android:id="@+id/volume_seek_bar"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:minHeight="2dp"
        android:maxHeight="2dp"
        android:progressDrawable="@drawable/bg_adjust_seek_bar"
        android:thumb="@drawable/bg_seek_bar_thumb"
        android:max="100"
        android:progress="30" />

    <LinearLayout
        android:id="@+id/speechRateLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/adjust_speechRate"
            android:textColor="@color/white" />

        <SeekBar
            android:id="@+id/speech_rate_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:minHeight="2dp"
            android:maxHeight="2dp"
            android:progressDrawable="@drawable/bg_adjust_seek_bar"
            android:thumb="@drawable/bg_seek_bar_thumb"
            android:max="100"
            android:progress="50" />
    </LinearLayout>

    <Button
        android:id="@+id/tts_play"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@drawable/play_btn"
        android:text="@string/tts_play"
        android:textColor="#ffffff" />

</LinearLayout>