<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="8dp"
    android:paddingVertical="8dp"
    android:orientation="vertical"
    tools:context=".AddRecordActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/file_upload"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/fileNameEditText"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/please_select_file"
        android:background="@drawable/edittext_border"
        android:textColor="@color/white"
        android:textColorHint="#9EABB2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingHorizontal="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="" />

        <Button
            android:id="@+id/selectFile"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/default_btn"
            android:text="@string/select_file" />

        <Button
            android:id="@+id/uploadBtn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/play_btn"
            android:text="@string/upload" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/upload_plan"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uploading" />

        <ProgressBar
            android:id="@+id/progress_bar_upload"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_gravity="center"
            android:max="100"
            android:progress="0" />
    </LinearLayout>
    <TextView
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/file_upload_prompt"/>
</LinearLayout>