<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/extinguisherWeight"
    android:layout_width="300dp"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/extinguisher_view"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/extinguisherConnect"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/connection_status_notconnected"
            android:textColor="@color/white" />

        <Switch
            android:id="@+id/safetySwitchSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/safety_switch"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="visible">

            <Button
                android:id="@+id/operateBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/play_btn"
                android:text="@string/open"
                android:textColor="@color/white" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginLeft="10dp"
                android:text="@string/state"
                android:textColor="@color/white" />
            <TextView
                android:id="@+id/openState"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_weight="1"
                android:text="@string/closed"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>