<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/waterBranchWeight"
    android:layout_width="300dp"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/waterBranch_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/waterBranchConnect"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/connection_status_notconnected"
            android:textColor="@color/white" />

        <Switch
            android:id="@+id/safetySwitchSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/safety_switch"
            android:textColor="@color/white"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="visible">

            <Button
                android:id="@+id/hoseReleaseBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/play_btn"
                android:text="@string/hoseRelease"
                android:textColor="@color/white"
                android:enabled="false"/>

            <Button
                android:id="@+id/hoseDetachmentBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/play_btn"
                android:text="@string/hoseDetachment"
                android:textColor="@color/white"
                android:enabled="false" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>